cmake_minimum_required(VERSION 3.14.5)
project(Study)

set(CMAKE_CXX_STANDARD 14)

add_executable(Study
            Chapter04.cpp
            Chapter05.cpp
            Chapter06.cpp
            Chapter07.cpp
            Chapter08.cpp
            Chapter09.cpp
                golf.cpp golf.h
                Nine_4.cpp Nine_4.h
            Chapter10.cpp
                Ten.cpp Ten.h
            Chapter11.cpp
                Eleven.cpp Eleven.h
            Chapter12.cpp
                Twelve.cpp Twelve.h
            Chapter13.cpp
                Thirteen.cpp Thirteen.h Chapter14.cpp Fourteen.cpp Fourteen.h)